--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -790,7 +790,7 @@ Optimización de configuraciones de hiperparámetros $\mathcal{A}$ vía estimaci
 
 	\begin{block}{Atributos del grafo de comunicaciones}
 		En cada arista $\left< u, w \right>$ del grafo se desagrega la interacción en base a distintos criterios
-		$\left< tiempo_{uw}, q\_llamados_{uw}, dirección, vulnerabilidad, momento, mes \right>$ 
+		$\left< tiempo_{uw}, q\_llamados_{uw}, direccion, vulnerabilidad, momento, mes \right>$ 
 %		donde $tiempo$ es el tiempo total en todos los llamados, $q\_llamados$ es la cantidad de llamados, $direccion$ es una variable booleana que indica si el llamado es entrante o saliente para $u$, $vulnerabilidad$ depende de si $w \in E_Z$ y $momento$ corresponde a una partición de la semana entre los días laborales, los fines de semana y los horarios no laborales
 %	
 \end{block}
@@ -868,7 +868,7 @@ Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
 			&  \multicolumn{4}{c}{Problema 1} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Regresión \ Logística$     & 0.893 & 0.857 & 0.9   & 96\\
+			$Regresion \ Logistica$     & 0.893 & 0.857 & 0.9   & 96\\
 			$Bosques \ Aleatorios$            & 0.878 & 0.857 & 0.9  & 33 \\
 			$GTB$ & 0.974 & 0.978 & 0.952 & 41  \\
 			$Naive \ Bayes$               & 0.84  & 0.82  & 0.75  & 2  \\
@@ -886,7 +886,7 @@ Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
 			&  \multicolumn{4}{c}{Problema 2} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Regresión \ Logística$     & 0.714 & 0.726 & 0.248 & 119 \\
+			$Regresion \ Logistica$     & 0.714 & 0.726 & 0.248 & 119 \\
 			$Bosques \ Aleatorios$            & 0.79  & 0.776 & 0.278 & 45  \\
 			$GTB$ & 0.838 & 0.819 & 0.291 & 54 \\
 			$Naive \ Bayes$               & 0.64  & 0.61  & 0.31  & 2   \\
@@ -908,7 +908,7 @@ Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
 			&  \multicolumn{4}{c}{Problema 3} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Regresión \ Logística$     & 0.705 & 0.754 & 0.307 & 115 \\
+			$Regresion \ Logistica$     & 0.705 & 0.754 & 0.307 & 115 \\
 			$Bosques \ Aleatorios$            &  0.792 & 0.845 & 0.346 & 21 \\
 			$GTB$ & 0.811 & 0.855 & 0.359 & 33 \\
 			$Naive \ Bayes$               & 0.65  & 0.63  & 0.45  & 1  \\
@@ -923,7 +923,7 @@ Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
 			&  \multicolumn{4}{c}{Problema 4} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Regresión \ Logística$     & 0.883 & 0.85  & 0.331 & 106 \\
+			$Regresion \ Logistica$     & 0.883 & 0.85  & 0.331 & 106 \\
 			$Bosques \ Aleatorios$            & 0.898 & 0.853 & 0.393 & 19 \\
 			$GTB$ & 0.885 & 0.873 & 0.384 & 47 \\
 			$Naive \ Bayes$               & 0.85  & 0.76  & 0.62 & 1 \\
